sushiweb/devops/base/smee-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smee
  labels:
    app: smeeclient
    app.kubernetes.io/component: smeeclient
    app.kubernetes.io/instance: smeeclient
    app.kubernetes.io/part-of: sushiweb
    app.openshift.io/runtime-namespace: sushi-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smeeclient
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: smeeclient
        deploymentconfig: smeeclient
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:          
        - env:
          - name: HTTPTARGET
            value: >-
              https://rhos-10:8443/apis/build.openshift.io/v1/namespaces/seb/buildconfigs/sushiweb/webhooks/Y93Q3RDx7N7CdA8VH3te/github
          - name: NODE_TLS_REJECT_UNAUTHORIZED
            value: '0'
          - name: SMEESOURCE
            value: 'https://smee.io/dD3FhY3BKh7eJb'
          name: smee
          image: quay.io/schabrolles/smeeclient:stable
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
