sushiweb/devops/base/sushi-dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      argocd.argoproj.io/compare-options: IgnoreExtraneous,IgnoreDifference=/spec/template/spec/containers/0/image
    labels:
      app.kubernetes.io/component: website
      app.kubernetes.io/name: sushi-website
      app.kubernetes.io/part-of: sushiweb
      app: sushiweb
    name: sushiweb
  spec:
    replicas: 3
    revisionHistoryLimit: 1
    selector:
      app: sushiweb
      deploymentconfig: sushiweb
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
          argocd.argoproj.io/sync-options: Validate=false
          argocd.argoproj.io/compare-options: IgnoreExtraneous,IgnoreDifference=/spec/containers/0/image
        creationTimestamp: null
        labels:
          app: sushiweb
          deploymentconfig: sushiweb
      spec:
        containers:
        - image: sushiweb:latest
          imagePullPolicy: Always
          name: sushiweb
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - sushiweb
        from:
          kind: ImageStreamTag
          name: sushiweb:latest
      type: ImageChange
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
